orion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: orion
  name: orion
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: orion
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/fer_fiware: "true"
        io.kompose.service: orion
    spec:
      containers:
        - args:
            - -dbhost
            - mongo
            - -dbuser
            - root
            - -dbpwd
            - example
          image: fiware/orion
          name: orion
          ports:
            - containerPort: 1026
          resources: {}
      restartPolicy: Always
status: {}
