python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: python
  name: python
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: python
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/ferfiware: "true"
        io.kompose.service: python
    spec:
      containers:
        - args:
            - bash
            - -c
            - pip install --no-cache-dir -r /entities/requirements.txt && python /entities/runDraco.py && sh /entities/subscribeResPredictionTicketDraco.sh
          image: python:3
          name: python
          resources: {}
          volumeMounts:
            - mountPath: /entities
              name: python-claim0
      restartPolicy: Always
      volumes:
        - name: python-claim0
          persistentVolumeClaim:
            claimName: python-claim0
status: {}
