spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-master
  name: spark-master
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spark-master
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/ferfiware: "true"
        io.kompose.service: spark-master
    spec:
      containers:
        - args:
            - bash
            - -c
            - sleep 12 && sh /prediction-job/run-spark-jobs.sh
          image: bde2020/spark-master:2.4.4-hadoop2.7
          name: spark-master
          ports:
            - containerPort: 8080
            - containerPort: 7077
            - containerPort: 9001
          resources: {}
          volumeMounts:
            - mountPath: /prediction-job
              name: spark-master-claim0
      restartPolicy: Always
      volumes:
        - name: spark-master-claim0
          persistentVolumeClaim:
            claimName: spark-master-claim0
status: {}
