draco-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: draco
  name: draco
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
    - name: "5050"
      port: 5050
      targetPort: 5050
  selector:
    io.kompose.service: draco
status:
  loadBalancer: {}
