maven-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: maven
  name: maven
spec:
  ports:
    - name: "8092"
      port: 8092
      targetPort: 8092
  selector:
    io.kompose.service: maven
status:
  loadBalancer: {}
