orion-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: orion
  name: orion
spec:
  ports:
    - name: "1026"
      port: 1026
      targetPort: 1026
  selector:
    io.kompose.service: orion
status:
  loadBalancer: {}
