spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: spark-master
  name: spark-master
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "7077"
      port: 7077
      targetPort: 7077
    - name: "9001"
      port: 9001
      targetPort: 9001
  selector:
    io.kompose.service: spark-master
status:
  loadBalancer: {}
